kubernetes/apps/base/atlantis/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlantis-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames: ["atlantis-webhook.${DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: atlantis
          namespace: atlantis
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /events
